--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="https://assets.chhatreshkhatri.com/icons/apple-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Chhatresh Khatri | Visits Counter</title>
+    <title>Visits Counter</title>
   </head>
   <body class="font-poppins">
     <noscript>You need to enable JavaScript to run this app.</noscript>
