--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://assets.chhatreshkhatri.com/icons/favicon.ico" />
+    <link rel="icon" href="https://cdn.chhatreshkhatri.com/icons/favicon.ico" />
+    <link rel="shortcut icon" href="https://cdn.chhatreshkhatri.com/icons/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#191919" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="https://assets.chhatreshkhatri.com/icons/apple-icon.png" />
+    <link rel="apple-touch-icon" href="https://cdn.chhatreshkhatri.com/icons/apple-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Visits Counter</title>
   </head>
